fixed styling on smaller screens

--- a/frontend/src/components/PlayerData.css
+++ b/frontend/src/components/PlayerData.css
@@ -54,7 +54,7 @@
   color: #fff;
   font-weight: 500;
   font-size: 18px;
-  margin-bottom: 28px;
+  margin-bottom: 30px;
 }
 .player-data-table {
   background: #212027;
@@ -183,7 +183,7 @@
     margin-bottom: 6px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
   }
 }
 
